--- a/protofile.html
+++ b/protofile.html
@@ -7,9 +7,10 @@
     <title>Mohmad Joma</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="protofile.css">
-        <link rel="stylesheet" href="css/bootstrap.css" />        <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="css/bootstrap.css" />       
+    <link rel="stylesheet" href="index.css" />
     <script src="js/html5shiv.min"> </script>
-     <script src="js/respond.min"></script>
+    <script src="js/respond.min"></script>
     
 </head>
 <body>
@@ -92,7 +93,7 @@
                 <div class="project-info">
                     <h1>Places / Router Vue</h1>
                     <h3 >I Used Html and Css and Js and Vue.js</h3>
-                   <a href="#"><div class="btn btn-primary p-4">go to Project</div></a> 
+                   <a href="https://github.com/mohmad00123456/place"><div class="btn btn-primary p-4">go to Project</div></a> 
                 </div>
             </div>
             <!-- project-card-tow -->
@@ -103,7 +104,7 @@
                 <div class="project-info">
                     <h1>Trasnition Validation</h1>
                     <h3 >I Used Html and Css and Js and Vue.js</h3>
-                    <a href="#"><div class="btn btn-primary p-4">go to Project</div></a>
+                    <a href="https://github.com/mohmad00123456/transition"><div class="btn btn-primary p-4">go to Project</div></a>
                 </div>
             </div>
             <!-- project-card-three -->
@@ -115,7 +116,7 @@
                     <div class="project-info">
                         <h1>Web Bootstrap</h1>
                         <h3>I Used Html and Bootstrap</h3>
-                        <a href="#"><div class="btn btn-primary p-4">go to Project</div></a>
+                        <a href="https://github.com/mohmad00123456/font-end"><div class="btn btn-primary p-4">go to Project</div></a>
                     </div>
                 </div>
         </div>
@@ -150,7 +151,7 @@
     </section>
 
     <footer class="footer">
-        <p class="footer-title">Copyrights @ <span>Mohmad Joma</span></p>
+        <p class="footer-title"> @ <span>Mohmad Joma</span></p>
         <div class="social-icons">
             <a href="https://github.com/mohmad00123456"><i class="fab fa-github"></i></a>
             <a href="#"><i class="fab fa-twitter"></i></a>
