--- a/protofile.html
+++ b/protofile.html
@@ -99,12 +99,12 @@
             <!-- project-card-tow -->
             <div class="project-card">
                 <div class="project-image">
-                   <img src="image/‏‏لقطة الشاشة (3).png">
+                   <img src="image/‏‏لقطة الشاشة (11).png">
                 </div>
                 <div class="project-info">
                     <h1>Trasnition Validation</h1>
                     <h3 >I Used Html and Css and Js and Vue.js</h3>
-                    <a href="https://github.com/mohmad00123456/transition"><div class="btn btn-primary p-4">go to Project</div></a>
+                    <a href="https://github.com/mohmad00123456/hc"><div class="btn btn-primary p-4">go to Project</div></a>
                 </div>
             </div>
             <!-- project-card-three -->
